FPO Map Images + Functionality
Map images need to be better stylized (include numbers on markers, etc.
-Callback load of heightened zoom at the beginning

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     async defer></script> -->
 
 <section class="main-hero full-page">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
 	<polygon class="bg-diamond" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/>
 	<polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/>
@@ -167,7 +166,6 @@
 </section>
 
 <section class="region-hero full-page" id="nca-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
@@ -180,8 +178,8 @@
 		</filter>
 	</svg>
 	<video autoplay loop muted>
-		<source src="video/VCA_Family_Hero_Northern_v1.webmhd.webm" type="video/webm">
-		<source src="video/VCA_Family_Hero_Northern_v1.mp4" type="video/mp4">
+		<source src="video/FPO-northern-vid-2.webm" type="video/webm">
+		<source src="video/FPO-northern-vid-2.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 </section>
@@ -346,12 +344,7 @@
 </section> 
 
 <!-- CAMP CA -->
-<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="camp-ca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -488,18 +481,12 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
-				<img src="assets/VCA_color.gif" class="vca-logo-color">
 			</div>
 		</div>
 </section>
 
 <!-- PHOTO OP -->
-<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="photo-op">
 	<div class="container-fluid article">
 		<div class="row">
@@ -556,12 +543,7 @@
 </section>
 
 <!-- ROAD TRIP -->
-<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="article-roadtrip">
 	<div class="container-fluid article">
 		<div class="row">
@@ -582,7 +564,7 @@
 				<ul class="scroll-list">
 					<li class="parallax-bg__empty" id="list-roadtrip">
 						<div class="circle-container" id="roadtrip-circle-1">
-							<div class="roadtrip-circle" id="circle-map"></div>
+							<div class="roadtrip-circle"></div>
 						</div>
 						<div class="col-md-6">
 							<div class="scroll-list-box">
@@ -605,7 +587,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__empty">
+					<li class="parallax-bg__empty" id="roadtrip-3">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header">
@@ -616,7 +598,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__myers">
+					<li class="parallax-bg__myers" id="roadtrip-4">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -649,7 +631,7 @@
 							</div>
 						</div>
 						<div class="circle-container" id="roadtrip-circle-2">
-							<div class="roadtrip-circle"></div>
+							<div class="roadtrip-circle" id="last-circle"></div>
 						</div>
 					</li>
 				</ul>		
@@ -659,12 +641,7 @@
 </section>
 
 <!-- KID ATTRACTIONS -->
-<svg class="section-marker northern" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 14.3925 16.241)" class="letter">N</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="kid-attractions">
 	<div class="container-fluid article">
 		<div class="row">
@@ -769,7 +746,6 @@
 </section>
 
 <section class="region-hero full-page" id="cca-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
 	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
 	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
@@ -782,8 +758,7 @@
 	</filter>
 </svg>
 	<video autoplay loop muted>
-		<source src="video/VCA_Family_Hero_Central_v1.webmhd.webm" type="video/webm">
-		<source src="video/VCA_Family_Hero_Central_v1.mp4" type="video/mp4">
+		<source src="video/508845990.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 </section>
@@ -879,12 +854,7 @@
 </section> 
 
 <!-- Edu(va)cation -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="eduvacation">
 	<div class="container-fluid article">
 		<div class="row">
@@ -961,12 +931,7 @@
 </section>
 
 <!-- Meet Central California -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="article-meet-cca">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1007,12 +972,7 @@
 </section> 
 
 <!-- Must-See Parks -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="must-see-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1073,12 +1033,7 @@
 </section>
 
 <!-- #EEATS -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text class="letter" transform="matrix(1 0 0 1 15.1928 16.241)">C</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="article-eats">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1118,7 +1073,6 @@
 </section> 
 
 <section class="region-hero full-page">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
@@ -1128,7 +1082,7 @@
 		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
 	</svg>
 	<video autoplay loop muted>
-		<source src="video/VCA_Family_Hero_Southern_v1.mp4" type="video/mp4">
+		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 </section>
@@ -1366,12 +1320,7 @@
 </section> 
 
 <!-- Theme Parks -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="theme-parks">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1479,12 +1428,7 @@
 </section>
 
 <!-- Surf 'n Skate' -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="article-surf-skate">
 	<div class="container-fluid article">
 		<div class="row">
@@ -1591,12 +1535,7 @@
 </section>
 
 <!-- Kid Beaches -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
+<img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="kid-beaches">
 	<div class="container-fluid article">
 		<div class="row">
