Blog box started

--- a/index.html
+++ b/index.html
@@ -191,7 +191,16 @@
 			<div class="col-md-9">
 				<h1>Brandi's Guide To Northern California</h1>
 				<h2>The mama behind <span class="italc">Mama Knows It All</span> shares her favorite places to play with her family.</h2>
-				<img class="blogger-info-box" src="images/FPO_Blogger_box.png">
+				<div class="blogger-profile-wrap clearfix">
+					<div class="left-quadrant">
+						<div class="btm-row">
+							<h1>Brandi Riley</h1>
+						</div>
+					</div>
+					<div class="right-quadrant">
+						<div class="btm-row"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
