Re-dropped FPO Vidoes and Hero Logos
Redressed from lost merge…

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     async defer></script> -->
 
 <section class="main-hero full-page">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
 	<polygon class="bg-diamond" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/>
 	<polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/>
@@ -166,6 +167,7 @@
 </section>
 
 <section class="region-hero full-page" id="nca-hero">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
@@ -178,9 +180,8 @@
 		</filter>
 	</svg>
 	<video autoplay loop muted>
-		<source src="video/FPO-northern-vid-2.webm" type="video/webm">
-		<source src="video/FPO-northern-vid-2.mp4" type="video/mp4">
-		Your browser does not support the video tag.
+		<source src="video/VCA_Family_Hero_Northern_v1.webmhd.webm" type="video/webm">
+ 		<source src="video/VCA_Family_Hero_Northern_v1.mp4" type="video/mp4">	Your browser does not support the video tag.
 	</video>
 </section>
 
@@ -490,6 +491,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
+				<img src="assets/VCA_color.gif" class="vca-logo-color">
 			</div>
 		</div>
 </section>
@@ -755,6 +757,7 @@
 </section>
 
 <section class="region-hero full-page" id="cca-hero">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
 	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
 	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
@@ -767,7 +770,8 @@
 	</filter>
 </svg>
 	<video autoplay loop muted>
-		<source src="video/508845990.mp4" type="video/mp4">
+		<source src="video/VCA_Family_Hero_Central_v1.webmhd.webm" type="video/webm">
+ 		<source src="video/VCA_Family_Hero_Central_v1.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 </section>
@@ -1081,7 +1085,8 @@
 	</div>
 </section> 
 
-<section class="region-hero full-page">
+<section class="region-hero full-page" id="sca-hero">
+	<img src="assets/VCA_white.gif" class="vca-hero-logo">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
@@ -1091,8 +1096,7 @@
 		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
 	</svg>
 	<video autoplay loop muted>
-		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
-		Your browser does not support the video tag.
+		<source src="video/VCA_Family_Hero_Southern_v1.mp4" type="video/mp4">Your browser does not support the video tag.
 	</video>
 </section>
 
