Hi-Res Resized, Placed
Original hi-res in raw folder, fpos deleted

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-steep-ravine.jpg">
+				<img src="images/camp-ca/steep-ravine.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -405,7 +405,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-mackerricher.jpg">
+				<img src="images/camp-ca/mackerricher.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -425,7 +425,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-beach.jpg">
+				<img src="images/camp-ca/beach.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -445,7 +445,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-tomales.jpg">
+				<img src="images/camp-ca/tomales.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -465,7 +465,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-sequoia.jpg">
+				<img src="images/camp-ca/sequoia.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -485,7 +485,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/fpo-bigbasin.jpg">
+				<img src="images/camp-ca/bigbasin.jpg">
 			</div>
 		</div>
 		<div class="row">
