profile box created

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
-						<div class="btm-row"></div>
+						<div class="btm-row">
+							<h4>Oakland, CA</h4>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -779,7 +781,18 @@
 			<div class="col-md-9">
 				<h1>Pattie's Guide To Northern California</h1>
 				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
-				<img class="img-responsive begin-content blogger-info-box" src="images/pattie/FPO_Pattie_Blogger_box.png">
+				<div class="blogger-profile-wrap clearfix">
+					<div class="left-quadrant">
+						<div class="btm-row">
+							<h1>Pattie Cordova</h1>
+						</div>
+					</div>
+					<div class="right-quadrant">
+						<div class="btm-row">
+							<h4>Los Angeles, CA</h4>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
