Animation Styles Added
Along with Jquery

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-md-6 col-md-offset-6 animateblock btm">
 				<img src="images/camp-ca/steep-ravine.jpg">
 			</div>
 		</div>
@@ -409,7 +409,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-md-6 col-md-offset-6 animateblock btm">
 				<img src="images/camp-ca/mackerricher.jpg">
 			</div>
 		</div>
@@ -429,7 +429,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-md-6 col-md-offset-6 animateblock btm">
 				<img src="images/camp-ca/beach.jpg">
 			</div>
 		</div>
@@ -449,7 +449,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-6">
+			<div class="col-md-6 col-md-offset-6 animateblock btm">
 				<img src="images/camp-ca/tomales.jpg">
 			</div>
 		</div>
@@ -470,7 +470,9 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/sequoia.jpg">
+				<div class="animateblock btm">
+					<img src="images/camp-ca/sequoia.jpg">
+				</div>
 			</div>
 		</div>
 		<div class="row">
