All boxes created
And profile pictures added to each.

--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,18 @@
 			<div class="col-md-9">
 				<h1>Justine's 25 Reasons to Visit California</h1>
 				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
-				<img class="img-responsive begin-content blogger-info-box" src="images/justine/FPO_Justine_Blogger_box.png">
+				<div class="blogger-profile-wrap clearfix">
+					<div class="left-quadrant">
+						<div class="btm-row">
+							<h1>Justine Howell</h1>
+						</div>
+					</div>
+					<div class="right-quadrant">
+						<div class="btm-row">
+							<h4>Temecula, CA</h4>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
