Zoom effect created
Map and zoom effect added.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 						<div class="btm-row">
 							<h4>Oakland, CA</h4>
 						</div>
+						<img src="images/brandi/map.png">
 					</div>
 				</div>
 			</div>
