--- a/index.html
+++ b/index.html
@@ -199,10 +199,14 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
+						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+						</svg>
 						<div class="btm-row">
 							<h4>Oakland, CA</h4>
 						</div>
-						<img src="images/brandi/map.png">
+						<img src="images/brandi/brandi-map-zoom.png">
 					</div>
 				</div>
 			</div>
@@ -231,7 +235,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -239,7 +243,7 @@
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -279,7 +283,7 @@
 				<div class="col-md-5">
 					<div class="caption">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle cx="9.6" cy="9.6" r="9.6"/>
+							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 						</svg>
 						<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -287,7 +291,7 @@
 					</div>
 					<div class="caption">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle cx="9.6" cy="9.6" r="9.6"/>
+							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 						</svg>
 						<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -805,7 +809,7 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h1>Pattie's Guide To Northern California</h1>
-				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
+				<h2>The mama behind Living Mi Vida Loca shares her favorite Central California spots.</h2>
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
 						<div class="btm-row">
@@ -813,9 +817,14 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
+						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+						</svg>
 						<div class="btm-row">
 							<h4>Los Angeles, CA</h4>
 						</div>
+						<img src="images/pattie/pattie-map-zoom.png">
 					</div>
 				</div>
 			</div>
@@ -846,7 +855,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -873,7 +882,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -881,7 +890,7 @@
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -1160,8 +1169,8 @@
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-9">
-				<h1>Justine's 25 Reasons to Visit California</h1>
-				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
+				<h1>Justine’s Guide to Southern California</h1>
+				<h2>The mama behind The Typical Mom shares 25 of her favorite places to play with the family.</h2>
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
 						<div class="btm-row">
@@ -1169,9 +1178,14 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
+						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
+							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+						</svg>
 						<div class="btm-row">
 							<h4>Temecula, CA</h4>
 						</div>
+						<img src="images/justine/justine-map-zoom.png">
 					</div>
 				</div>
 			</div>
@@ -1207,7 +1221,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -1215,7 +1229,7 @@
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
@@ -1259,7 +1273,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet.</p>
@@ -1267,7 +1281,7 @@
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet.</p>
@@ -1305,7 +1319,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>San Clemente pier. <span class="italc cred inline">Getty Images</span></p>
@@ -1363,7 +1377,7 @@
 			<div class="col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet.</p>
@@ -1371,7 +1385,7 @@
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
 					<p>Lorem ipsum dolor sit amet.</p>
