--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
 <section class="container-fluid toc clearfix" id="toc">
 	<div class="row">
 		<div class="col-md-4 toc-nca">
+			<div class="toc-bg-container">
+				<div class="toc-nca-bg"></div>
+			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#nrthrn-blog-post">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with</div></br>
 	  				Brandi Riley</a></li>
-	  			<li class="toc-plus">plus</li>
+	  			<li class="toc-plus">More Ways to Play</li>
 	    		<li><a href="#camp-ca">Camp California</a></li>
 	    		<li role="separator" class="divider"></li>
 	    		<li><a href="#photo-op">Photo Op: Share-Worthy Northern California Spots</a></li>
@@ -54,13 +58,17 @@
 	  		</ul>
 		</div>
 		<div class="col-md-4 toc-cca">
+			<div class="toc-bg-container">
+				<div class="toc-cca-bg"></div>
+			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">CENTRAL CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with</div></br>
 	  				Patti Cordova</a></li>
-	  			<li class="toc-plus">plus</li>
+	  			<li class="toc-plus">More Ways to Play</li>
 			    <li><a href="#eduvacation">Edu(va)cation</a></li>
 	    		<li role="separator" class="divider"></li>
 	    		<li><a href="#article-meet-cca">Get to Know Central California</a></li>
@@ -71,13 +79,17 @@
 	  		</ul>
 		</div>
 		<div class="col-md-4 toc-sca">
+			<div class="toc-bg-container">
+				<div class="toc-sca-bg"></div>
+			</div>
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">SOUTHERN CALIFORNIA</li>
 	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
-	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with</div></br>
 	  				Justine Howell</a></li>
-	  			<li class="toc-plus">plus</li>
+	  			<li class="toc-plus">More Ways to Play</li>
 	  			<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
 	    		<li role="separator" class="divider"></li>
 	    		<li><a href="#surf-skate">Surf ’n Skate</a></li>
