--- a/index.html
+++ b/index.html
@@ -492,7 +492,9 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
-				<img src="images/camp-ca/bigbasin.jpg">
+				<div class="animateblock btm">
+					<img src="images/camp-ca/bigbasin.jpg">
+				</div>
 			</div>
 		</div>
 		<div class="row">
