Added Hi-Res Photos
+Updated margin on circle container
+Updated parallax backgrounds

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__myers" id="roadtrip-4">
+					<li class="parallax-bg__founders-grove" id="roadtrip-4">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
@@ -667,7 +667,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__myers">
+					<li class="parallax-bg__eternal-tree-house">
 						<div class="col-md-6">
 							<div class="scroll-list-box">
 								<div class="box-header one-line">
