Added Bella Video
+Responsive styles for all videos

--- a/index.html
+++ b/index.html
@@ -1741,6 +1741,36 @@
 	</a>
 </section>
 
+<!-- BELLA VIDEO -->
+<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
+	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
+	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
+	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
+</svg>
+<section class="bg-img-container-wrap northern" id="video-bella">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Bella Video</br>Headline TK</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Lorem ipsum dolor sit amet, ultrices aenean dictum, repellendus duis quam dolor malesuada. Id erat sodales omnis venenatis phasellus sodales, egestas sit luctus curabitur. Laoreet accumsan suspendisse libero elit, egestas in amet orci luctus sed mollis, ligula vivamus orci aliquet dictum, turpis pede vestibulum lobortis per libero, ac vestibulum leo pretium sed at. Pede vel sed lacus adipiscing iaculis.</h2>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="videoWrapper" id="bella-vid">
+					<iframe class="youtube-video" id="bella-vid" width="560" height="315" src="https://www.youtube.com/embed/a5MSF7d-YsY" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <script src="js/bootstrap.min.js"></script>
 <!-- <script src="js/jquery.waypoints.min.js"></script> -->
