--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
 
+<!-- <script src="js/jquery.elevateZoom-3.0.8.min.js"></script> -->
+
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZNhA-UO2M07yKZ4Khrj0OcvNEmXD6gI8&callback=initMap"
     async defer></script> -->
@@ -1202,6 +1204,7 @@
 							<h4>Temecula, CA</h4>
 						</div>
 						<img src="images/justine/justine-map-zoom.png">
+						<!-- <img id="zoom_05" src="images/justine/justine-map-zoom-sm.jpg" data-zoom-image="images/justine/justine-map-zoom-lg.jpg"/> -->
 					</div>
 				</div>
 			</div>
