One small edit made to Pattie's hed

--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 	<div class="container-fluid article blogger-post">
 		<div class="row">
 			<div class="col-md-9">
-				<h1>Pattie's Guide To Northern California</h1>
+				<h1>Pattie's Guide To Central California</h1>
 				<h2>The mama behind Living Mi Vida Loca shares her favorite Central California spots.</h2>
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
