Added Fancy Box Plugin

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 	<link type="text/css"; rel="stylesheet"; href="css/normalize.css">
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
+	<link rel="stylesheet" href="/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<!-- <link rel="icon" href="assets/favicon.png"> -->
 	<title>State of Play</title>
-	<script src='https://api.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.js'></script>
-	<link href='https://api.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' />
 </head>
+
+
 <body>
+
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
+<script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZNhA-UO2M07yKZ4Khrj0OcvNEmXD6gI8&callback=initMap"
-    async defer></script> -->
 
 <section class="main-hero full-page">
 	<img src="assets/VCA_white.gif" class="vca-hero-logo">
@@ -409,7 +409,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img src="images/camp-ca/steep-ravine.jpg">
+				<a href="images/camp-ca/steep-ravine.jpg" class="fancybox"><img src="images/camp-ca/steep-ravine.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
