Small changes to different sections
-Blogger profile box given max-width
-Resized anti-road trip images, will revisit tomorrow.

--- a/index.html
+++ b/index.html
@@ -1745,7 +1745,7 @@
 </section>
 
 <!-- BELLA VIDEO -->
-<svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
+<!-- <svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
 	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
 	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
 	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
@@ -1773,7 +1773,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <script src="js/bootstrap.min.js"></script>
 <!-- <script src="js/jquery.waypoints.min.js"></script> -->
