Adjusted the code file paths
-Files paths weren’t changed since copied from the Fancybox folder,
fixed.

-Some of the Fancybox styles are conflicting with the bootstrap/our
files, will dig a little deeper once I’m home.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link type="text/css"; rel="stylesheet"; href="css/normalize.css">
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
-	<link rel="stylesheet" href="/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="js/jquery.fancybox.css" type="text/css" media="screen" />
 	<!-- <link rel="icon" href="assets/favicon.png"> -->
 	<title>State of Play</title>
 </head>
@@ -22,7 +22,7 @@
 
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
-<script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
+<script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 
 
 <section class="main-hero full-page">
@@ -409,7 +409,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<a href="images/camp-ca/steep-ravine.jpg" class="fancybox"><img src="images/camp-ca/steep-ravine.jpg"></a>
+				<a class="fancybox" rel="group" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
