--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link type="text/css"; rel="stylesheet"; href="css/normalize.css">
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
-	<link rel="stylesheet" href="js/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" />
 	<!-- <link rel="icon" href="assets/favicon.png"> -->
 	<title>State of Play</title>
 </head>
@@ -409,7 +409,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<a class="fancybox" rel="group" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
+				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -429,7 +429,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img src="images/camp-ca/mackerricher.jpg">
+				<a class="fancybox" href="images/camp-ca/mackerricher.jpg"><img src="images/camp-ca/mackerricher.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -449,7 +449,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img src="images/camp-ca/beach.jpg">
+				<a class="fancybox" href="images/camp-ca/beach.jpg"><img src="images/camp-ca/beach.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -469,7 +469,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6 animateblock btm">
-				<img src="images/camp-ca/tomales.jpg">
+				<a class="fancybox" href="images/camp-ca/tomales.jpg"><img src="images/camp-ca/tomales.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
@@ -490,7 +490,7 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<img src="images/camp-ca/sequoia.jpg">
+					<a class="fancybox" href="images/camp-ca/sequoia.jpg"><img src="images/camp-ca/sequoia.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -512,7 +512,7 @@
 		<div class="row">
 			<div class="col-md-6 col-md-offset-6">
 				<div class="animateblock btm">
-					<img src="images/camp-ca/bigbasin.jpg">
+					<a class="fancybox" href="images/camp-ca/bigbasin.jpg"><img src="images/camp-ca/bigbasin.jpg"></a>
 				</div>
 			</div>
 		</div>
