Hi res image swapped for Yosemite
In Brandi’s blog post

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-7">
-					<img class="over" src="images/brandi/FPO_Yosemite.jpg">
+					<img class="over" src="images/brandi/yosemite.jpg">
 					<div class="caption">
 						<p class="italc cred inline">Getty Images</p>
 					</div>
